@@ -14,5 +14,4 @@ void foo()
 {
   cptr = mar(6);
   ((char *(*)(void *,int (*)(void *,unsigned char **),char**))((fp)bar))(0,0,(void*)(0)); /* { dg-warning "function called through a non-compatible type" "non-compatible type" } */
-  /* { dg-message "note: if this code is reached, the program will abort" "" { target *-*-* } 16 } */
 }
